--- a/public/index.html
+++ b/public/index.html
@@ -33,21 +33,16 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            Mic Night
-          </a> 
+          <a class="navbar-brand" href="#">Mic Night</a> 
         </div>
       </div>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-            <input type="search" ng-model="query" class="form-control" placeholder="Search">
+            <input type="search" ng-model="query" class="form-control" placeholder="Enter your artist, song, genre or decade">
         </div>
-       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/#/tools">Tools</a></li>
-      </ul> 
+      </form>
+      <button type="submit" ng-model="query" value="FavoriteSong">
     </nav>
-
     <div ng-view></div>
 
 </body>
